--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ aiofiles==22.1.0
 aiosqlite==0.20.0
 albucore==0.0.12
 albumentations==1.4.11
+altair==5.1.2
 annotated-types==0.7.0
 ansicolors==1.1.8
 anyio==4.4.0
-argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-array_record==0.5.1
+argon2-cffi==23.1.0
+array-record==0.4.1
 arrow==1.3.0
 astroid==3.2.2
 asttokens==2.4.1
@@ -26,10 +27,14 @@ certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
 chex==0.1.86
+click-plugins==1.1.1
 click==8.1.7
+cligj==0.7.2
 cloud-tpu-client==0.10
 cloudpickle==3.0.0
+colorama==0.4.6
 comm==0.2.2
+comtypes==1.2.0
 contourpy==1.2.1
 cramjam==2.8.3
 cycler==0.12.1
@@ -38,100 +43,123 @@ decorator==5.1.1
 defusedxml==0.7.1
 diffusers==0.29.2
 dill==0.3.8
+distlib==0.3.6
 distrax==0.1.5
-dm-haiku @ git+https://github.com/deepmind/dm-haiku@66d8b743fcb77e887cb2ee6dfe0a6195c818c8a2
 dm-tree==0.1.8
+dnspython==2.3.0
+docstring-parser==0.16
 docstring-to-markdown==0.15
-docstring_parser==0.16
+duckdb==0.9.1
 einops==0.8.0
 entrypoints==0.4
 etils==1.7.0
-eval_type_backport==0.2.0
+eval-type-backport==0.2.0
 exceptiongroup==1.2.1
 executing==2.0.1
+fastapi==0.104.1
 fastjsonschema==2.20.0
 fastparquet==2024.5.0
+ffmpy==0.3.1
 filelock==3.15.4
+fiona==1.9.5
 flake8==7.0.0
-Flask==3.0.3
+Flask-Login==0.6.2
+flask-ngrok==0.0.25
+Flask-PyMongo==2.3.0
+flask==3.0.3
 flatbuffers==24.3.25
 flax==0.8.4
 fonttools==4.53.1
 fqdn==1.5.1
 fsspec==2024.6.1
 funcsigs==1.0.2
-gast==0.6.0
+gast==0.4.0
+geopandas==0.14.1
 gin-config==0.5.0
+gitdb==4.0.11
+GitPython==3.1.40
 google-api-core==1.34.1
 google-api-python-client==1.8.0
-google-auth==2.32.0
 google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.0.0
+google-auth==2.32.0
 google-pasta==0.2.0
 googleapis-common-protos==1.63.2
+gradio-client==0.7.0
+gradio==4.1.2
+greenlet==3.0.3
 grpcio==1.64.1
-gym==0.26.2
+gTTS==2.3.2
 gym-notices==0.0.8
+gym==0.26.2
+h11==0.14.0
 h5py==3.11.0
+httpcore==1.0.1
 httplib2==0.22.0
+httpx==0.25.1
 huggingface-hub==0.23.4
 idna==3.7
 imageio==2.34.2
 immutabledict==4.2.0
-importlib_metadata==8.0.0
-importlib_resources==6.4.0
+importlib-metadata==8.0.0
+importlib-resources==6.4.0
+intel-openmp==2021.4.0
 ipykernel==6.29.5
-ipython==8.26.0
 ipython-genutils==0.2.0
+ipython==8.26.0
 isoduration==20.11.0
 isort==5.13.2
 itsdangerous==2.2.0
 jax==0.4.23
 jaxlib==0.4.23
 jedi==0.19.1
-Jinja2==3.1.4
+jinja2==3.1.4
 jmp==0.0.4
 joblib==1.4.2
 jraph==0.0.6.dev0
 json5==0.9.25
 jsonpointer==3.0.0
-jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+jsonschema==4.23.0
+jupyter-client==7.4.9
+jupyter-core==5.7.2
 jupyter-events==0.10.0
 jupyter-lsp==1.5.1
+jupyter-server-fileid==0.9.2
+jupyter-server-terminals==0.5.3
+jupyter-server-ydoc==0.8.0
+jupyter-server==2.14.1
 jupyter-ydoc==0.2.5
-jupyter_client==7.4.9
-jupyter_core==5.7.2
-jupyter_server==2.14.1
-jupyter_server_fileid==0.9.2
-jupyter_server_terminals==0.5.3
-jupyter_server_ydoc==0.8.0
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.27.2
 jupyterlab==3.6.7
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.2
 kagglehub==0.2.7
-keras==3.4.1
 keras-core==0.1.7
 keras-cv==0.9.0
-keras-nlp==0.14.0
 keras-tuner==1.4.7
+keras==3.4.1
 kiwisolver==1.4.5
 kt-legacy==1.0.5
-lazy_loader==0.4
+lazy-loader==0.4
 libclang==18.1.1
 librosa==0.10.2.post1
-libtpu-nightly==0.1.dev20231213
 llvmlite==0.43.0
-Markdown==3.6
 markdown-it-py==3.0.0
+Markdown==3.6
 MarkupSafe==2.1.5
-matplotlib==3.9.1
 matplotlib-inline==0.1.7
+matplotlib==3.9.1
 mccabe==0.7.0
 mdurl==0.1.2
 mistune==3.0.2
+mkl==2021.4.0
 ml-dtypes==0.3.2
 mpmath==1.3.0
 msgpack==1.0.8
+mysql-connector-python==8.0.33
+mysql-connector==2.2.9
+mysql==0.0.3
+mysqlclient==2.2.0
 namex==0.0.8
 nbclassic==1.1.0
 nbclient==0.10.0
@@ -139,29 +167,32 @@ nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.3
+ngrok==0.12.1
+nltk==3.8.1
+notebook-shim==0.2.4
 notebook==6.5.7
-notebook_shim==0.2.4
 numba==0.60.0
 numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
 nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.5.82
 nvidia-nvtx-cu12==12.1.105
 oauth2client==4.1.3
-opencv-python==4.10.0.84
+oauthlib==3.2.2
 opencv-python-headless==4.10.0.84
+opencv-python==4.10.0.84
 opt-einsum==3.3.0
 optax==0.2.2
 optree==0.12.1
 orbax-checkpoint==0.5.16
+orjson==3.9.10
+outcome==1.2.0
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
@@ -170,38 +201,54 @@ papermill==2.6.0
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.4.0
+pip==24.1.2
 platformdirs==4.2.2
+playwright==1.44.0
+plotly==5.18.0
 pluggy==1.5.0
 pooch==1.8.2
-prometheus_client==0.20.0
+prometheus-client==0.20.0
 promise==2.3
-prompt_toolkit==3.0.47
+prompt-toolkit==3.0.47
 protobuf==3.20.3
 psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==16.1.0
+pyasn1-modules==0.4.0
 pyasn1==0.6.0
-pyasn1_modules==0.4.0
 pycodestyle==2.11.1
 pycparser==2.22
+pydantic-core==2.20.1
 pydantic==2.8.2
-pydantic_core==2.20.1
+pydeck==0.8.1b0
 pydocstyle==6.3.0
+pydub==0.25.1
+pyee==11.1.0
 pyflakes==3.2.0
-Pygments==2.18.0
+pygments==2.18.0
 pylint==3.2.5
+pymongo==4.4.0
 pyparsing==3.1.2
+pypiwin32==223
+pyproj==3.6.1
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
 python-json-logger==2.0.7
 python-lsp-jsonrpc==1.1.2
 python-lsp-server==1.11.0
+python-multipart==0.0.6
 pytoolconfig==1.3.1
+pyttsx3==2.90
 pytz==2024.1
+pywin32==306
+pywinpty==2.0.13
 PyYAML==6.0.1
 pyzmq==26.0.3
 referencing==0.35.1
 regex==2024.5.15
+requests-oauthlib==1.3.1
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -214,32 +261,42 @@ scikit-image==0.24.0
 scikit-learn==1.5.1
 scipy==1.14.0
 seaborn==0.13.2
+selenium==4.11.2
+semantic-version==2.10.0
 Send2Trash==1.8.3
-simple_parsing==0.1.5
+setuptools==65.5.0
+shapely==2.0.2
+shellingham==1.5.4
+simple-parsing==0.1.5
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 snowballstemmer==2.2.0
+sortedcontainers==2.4.0
 soundfile==0.12.1
 soupsieve==2.5
 soxr==0.3.7
 stack-data==0.6.3
+starlette==0.27.0
+streamlit==1.29.0
 sympy==1.13.0
 tabulate==0.9.0
+tbb==2021.13.0
 tenacity==8.5.0
-tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow @ https://storage.googleapis.com/cloud-tpu-tpuvm-artifacts/tensorflow/tf-2.16.1/tensorflow-2.16.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
+tensorboard==2.16.2
 tensorflow-datasets==4.9.6
+tensorflow-estimator==2.13.0
 tensorflow-hub==0.16.1
-tensorflow-io==0.37.1
-tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-intel==2.16.2
+tensorflow-io-gcs-filesystem==0.31.0
 tensorflow-metadata==1.15.0
 tensorflow-probability==0.24.0
-tensorflow-text==2.16.1
+tensorflow==2.16.2
 tensorstore==0.1.63
 termcolor==2.4.0
 terminado==0.18.1
-tf_keras==2.16.0
+tf-keras==2.16.0
 threadpoolctl==3.5.0
 tifffile==2024.7.2
 timm==1.0.7
@@ -250,7 +307,6 @@ tomli==2.0.1
 tomlkit==0.12.5
 toolz==0.12.1
 torch==2.3.0
-torch-xla @ https://storage.googleapis.com/pytorch-xla-releases/wheels/tpuvm/torch_xla-2.3.0+libtpu-cp310-cp310-manylinux_2_28_x86_64.whl
 torchaudio==2.3.0
 torchtext==0.18.0
 torchvision==0.18.0
@@ -258,22 +314,31 @@ tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
 transformers==4.42.3
-trax==1.4.1
-triton==2.3.0
+trio-websocket==0.10.3
+trio==0.22.2
+typer==0.9.0
 types-python-dateutil==2.9.0.20240316
-typing_extensions==4.12.2
+typing-extensions==4.12.2
 tzdata==2024.1
+tzlocal==5.2
 ujson==5.10.0
 uri-template==1.3.0
 uritemplate==3.0.1
 urllib3==2.2.2
+uvicorn==0.24.0.post1
+validators==0.22.0
+virtualenv==20.23.1
+watchdog==3.0.0
 wcwidth==0.2.13
 webcolors==24.6.0
 webencodings==0.5.1
 websocket-client==1.8.0
-Werkzeug==3.0.3
+websockets==11.0.3
+werkzeug==3.0.3
 whatthepatch==1.0.5
+wheel==0.41.3
 wrapt==1.16.0
+wsproto==1.2.0
 xgboost==2.1.0
 y-py==0.6.2
 yapf==0.40.2
